# the-sdoajalizer

./: CMakeLists.txt  README.md
src/: color_utils.hpp  common.hpp  cuda_includes.hpp  gui.cpp  gui.hpp  main.cpp  main.hpp  npp_includes.hpp  stbi.cpp  texture.cpp  texture.hpp
src/ImGui/: imgui.cpp  imgui_internal.h  imgui_widgets.cpp  imnodes.cpp  imnodes.h  imnodes_internal.h
src/ImGui/combo_filter/: imgui_combo_filter.cpp  imgui_combo_filter.h
src/ImGui/imgui_gradient/src/: Gradient.cpp  Gradient.hpp  GradientWidget.cpp  GradientWidget.hpp  Interpolation.hpp  Mark.hpp  RelativePosition.cpp  color_ramp_interpolation.hpp  imgui_draw.cpp  internal.hpp
src/ImGui/misc/cpp/: imgui_stdlib.cpp
src/nodes/: all_nodes.hpp  edge.cpp  edge.hpp  node.cpp  node.hpp  node_enums.hpp  node_evaluator.cpp  node_evaluator.hpp  node_ui_elements.cpp  node_ui_elements.hpp  node_utils.hpp  pin.cpp  pin.hpp
src/nodes/types/: node_bloom.cu  node_bloom.hpp  node_brightnesscontrast.cu  node_brightnesscontrast.hpp  node_color.cu  node_color.hpp  node_colorramp.cu  node_colorramp.hpp  node_debug.cpp  node_debug.hpp  node_exposure.cu  node_exposure.hpp  node_fileinput.cu  node_fileinput.hpp  node_invert.cpp  node_invert.cu  node_invert.hpp  node_lut.cu  node_lut.hpp  node_maprange.cu  node_maprange.hpp  node_math.cu  node_math.hpp  node_mix.cu  node_mix.hpp  node_noise.cpp  node_noise.cu  node_noise.hpp  node_output.cpp  node_output.cu  node_output.hpp  node_paintinator.cu  node_paintinator.hpp  node_passthrough.cpp  node_passthrough.hpp  node_separatecomponents.cu  node_separatecomponents.hpp  node_tonemapping.cu  node_tonemapping.hpp  node_uvgradient.cu  (+2 more)
test/emissive spheres/: test_scene.blend
test/plants/: depth.exr
